--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@types/prettier": "^1.19.0",
     "@types/yargs": "^13.0.3",
     "chalk": "^3.0.0",
+    "execa": "^3.4.0",
     "js-yaml": "^3.13.1",
     "nodemon": "^2.0.2",
+    "ora": "^4.0.3",
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3",
