--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/prettier": "^1.19.0",
     "@types/yargs": "^13.0.3",
     "chalk": "^3.0.0",
+    "cli-highlight": "^2.1.4",
     "execa": "^3.4.0",
     "js-yaml": "^3.13.1",
     "nodemon": "^2.0.2",
