--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "bin": {
     "boom": "./lib/index.js"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "test": "jest",
     "program": "node ./lib/index.js",
     "build": "tsc -p .",
     "semantic-release": "semantic-release",
     "check-format": "prettier --list-different '**/*.{js,jsx,ts,tsx,html,vue,css,less,scss,graphql,yaml,yml,json,md,mdx}'",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,html,vue,css,less,scss,graphql,yaml,yml,json,md,mdx}'"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,html,vue,css,less,scss,graphql,yaml,yml,json,md,mdx}'",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -30,19 +34,13 @@
   "homepage": "https://github.com/eliasnorrby/dotfiles-cli#readme",
   "dependencies": {
     "@eliasnorrby/log-util": "^1.1.0",
-    "@types/js-yaml": "^3.12.1",
-    "@types/node": "^12.12.18",
-    "@types/prettier": "^1.19.0",
-    "@types/yargs": "^13.0.3",
     "chalk": "^3.0.0",
     "cli-highlight": "^2.1.4",
     "execa": "^3.4.0",
     "js-yaml": "^3.13.1",
-    "nodemon": "^2.0.2",
     "ora": "^4.0.3",
     "prettier": "^1.19.1",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.3",
     "yargs": "^15.0.2"
   },
   "devDependencies": {
@@ -52,10 +50,16 @@
     "@eliasnorrby/prettier-config": "^2.4.4",
     "@eliasnorrby/semantic-release-config": "^2.1.4",
     "@types/jest": "^24.0.23",
+    "@types/js-yaml": "^3.12.1",
+    "@types/node": "^12.12.21",
+    "@types/prettier": "^1.19.0",
+    "@types/yargs": "^13.0.3",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
+    "nodemon": "^2.0.2",
     "semantic-release": "^15.13.31",
-    "ts-jest": "^24.2.0"
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.7.3"
   },
   "publishConfig": {
     "access": "public"
