--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,6 @@
 # Added by @eliasnorrby/prettier-config
 dist/
+lib/
 build/
 coverage/
 node_modules/
@@ -7,3 +8,4 @@ node_modules/
 package*.json
 yarn-lock.json
 CHANGELOG.md
+tsconfig.json
